// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`core-fe-hmr-babel-plugin works with \`import * as CoreFENamespace\` 1`] = `
"import * as CoreFENamespace from \"core-fe\";
import { Main } from \"./component/Main\";
const initialState = {};

class FeatureModule extends CoreFENamespace.Module {}

const featureModule = register(new FeatureModule(\"feature\", initialState));
export const actions = featureModule.getActions();
export const MainComponent = featureModule.attachLifecycle(Main);
if (module.hot) module.hot.decline();"
`;

exports[`core-fe-hmr-babel-plugin works with \`import {Module as CoreFEModule}\` 1`] = `
"import { Module as CoreFEModule } from \"core-fe\";
import { Main } from \"./component/Main\";
const initialState = {};

class FeatureModule extends CoreFEModule {}

const featureModule = register(new FeatureModule(\"feature\", initialState));
export const actions = featureModule.getActions();
export const MainComponent = featureModule.attachLifecycle(Main);
if (module.hot) module.hot.decline();"
`;

exports[`core-fe-hmr-babel-plugin works with \`import {Module}\` 1`] = `
"import { Module } from \"core-fe\";
import { Main } from \"./component/Main\";
const initialState = {};

class FeatureModule extends Module {}

const featureModule = register(new FeatureModule(\"feature\", initialState));
export const actions = featureModule.getActions();
export const MainComponent = featureModule.attachLifecycle(Main);
if (module.hot) module.hot.decline();"
`;

exports[`core-fe-hmr-babel-plugin works with \`import CoreFEDefault, {Module}\` 1`] = `
"import CoreFEDefault, { Module } from \"core-fe\";
import { Main } from \"./component/Main\";
const initialState = {};

class FeatureModule extends Module {}

const featureModule = register(new FeatureModule(\"feature\", initialState));
export const actions = featureModule.getActions();
export const MainComponent = featureModule.attachLifecycle(Main);
if (module.hot) module.hot.decline();"
`;
